--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-crash:10.0.1'
+
     compile 'com.google.dagger:dagger:2.8'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'io.reactivex.rxjava2:rxjava:2.0.4'
