--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,25 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewEntryActivity">
+        <activity
+            android:name=".NewEntryActivity"
+            android:label="@string/title_activity_new_entry"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".SigninOrUpActivity"
+            android:label="@string/title_activity_signin_or_up"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SigninOrUpActivity"
-            android:label="@string/title_activity_signin_or_up"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
