[WIP] Add play activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
+            android:name=".PlayActivity"
+            android:label="@string/title_activity_new_entry"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
             android:name=".SigninOrUpActivity"
             android:label="@string/title_activity_signin_or_up"
             android:theme="@style/AppTheme.NoActionBar" />
